0.13.2.AK (PRE-RELEASE):
-----------------------
- Adds "SupplyNVME" Feature
  * A built in NvmExpress driver is loaded by default to provide NVMe support if required
  * This functionality can be disabled by setting the 'decline_nvmeload' token
- Fixes Compilation Issue on Recent GNU-EFI Versions
  * Synced with upstream update as well as an existing issue with 'REFIT_CALL_X_WRAPPER'
  * GNU-EFI compilation of RefindPlus is likely broken overall
- Fixes 'TagsHelp' Feature
  * Was inverted ... active when decline_tagshelp was set and vice versa after renaming the feature
  * This bug was introduced in v0.13.2.AH (Commit 1b043c3)
- Fixes Failure to Set Volume Badges and .VolumeIcon files on APFS Volumes
  * The items were skipped by optimisation meant to only skip such on APFS System Volumes for SyncAPFS
  * This bug was introduced in v0.13.2.AH (Commit d87d3fb)
- Fixes Memory Management
  * The 'MyFreePool' function implementation did not actually free items passed
  * Similarly, the 'ReleasePtr' function that called this was non operational
  * This affected the operation of various elements across the board
  * Both functions have now been consolidated into a new 'MY_FREE_POOL' macro
  * This bug was introduced in v0.13.2.AD (Commit 65e5083)
- Fix BTRFS Filesystem Driver Build
  * The BTRFS filesystem driver had been excluded from RefindPlus builds from the start of the project
  * This was due to long standing issues with EDK2 builds of the driver on EDK2 inherited from upstream
  * The build issues were resolved by GitHub User "joevt" and have been incorporated into RefindPlus
- Improves Time Bound Primed Buffer Mitigation
  * Prevents RefindPlus from spontaneously running default item
  * Intervention is now based on a minumum 0.50 second interval
  * Extended scope now covers Mac OS again (previously removed)
- Improves 'ProtectNVRAM' Implementation
  * Now ensures this is reset on each loop through the RefindPlus Main Loop